Fixed bug in Bootstrap for dropdown menu on mobile layout

--- a/src/WebSite/Content/style/site.less
+++ b/src/WebSite/Content/style/site.less
@@ -77,7 +77,8 @@ div.events {
     background: #ededef;
     background: -webkit-gradient(linear, left top, left bottom, from(#ededef), to(#ccc));
     background: -moz-linear-gradient(top, #ededef, #ccc);
-    font: bold 30px/60px Arial Black, Arial, Helvetica, sans-serif;
+    font: bold 30px Arial Black, Arial, Helvetica, sans-serif;
+    line-height: 60px;
     text-align: center;
     color: @color;
     -webkit-text-shadow: #fff 0 1px 0;
@@ -93,7 +94,8 @@ div.events {
 
 .calendar em {
     display: block;
-    font: normal bold 13px/35px Arial, Helvetica, sans-serif;
+    font: normal bold 13px Arial, Helvetica, sans-serif;
+    line-height: 35px;
     color: #fff;
     -webkit-text-shadow: #00365a 0 -1px 0;
     text-shadow: #00365a 0 -1px 0;
@@ -184,4 +186,9 @@ div.events {
 
 a:hover {
     text-decoration: none !important;
+}
+
+// Hotfix for bug in Bootstrap while displaying dropdown in mobile layout
+.dropdown-backdrop {
+    position: static;
 }
